--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,4 +1,6 @@
-{% extends './base.html' %} {% block home %} {% load static %}
+{% extends './base.html' %} 
+{% block home %} 
+{% load static %}
 
 <div style="text-align: center; max-width: 700px" class="center">
   <h1 class="hello">
