--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -1,153 +1,159 @@
 {% load static %}
 
-
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="shorcut icon" href="/django-alpha/static/images/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- BOOSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- GOOGLE FONTS -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;800&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;800&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- PERSONAL CSS STYLES -->
 
-    <link rel="stylesheet" href="{% static 'css/main.css' %} ">
+    <link rel="stylesheet" href="{% static 'css/main.css' %} " />
     <style>
-        div {
-            max-width: 1200px !important;
+      div {
+        max-width: 1200px !important;
+      }
+
+      #portfolio-btn {
+        background-color: rgb(121, 15, 15);
+        color: rgb(255, 255, 255);
+      }
+
+      #portfolio-btn:hover {
+        background-color: rgb(255, 255, 255);
+        color: rgb(143, 12, 12);
+      }
+
+      div.img-fluid {
+        max-width: 100%;
+      }
+
+      #contact-btn,
+      #download-btn {
+        margin-left: 10px;
+      }
+
+      .contact-btn {
+        background-color: rgb(225, 84, 84) !important;
+        color: #f0f0f0;
+      }
+
+      .contact-btn:hover {
+        background-color: rgb(0, 0, 0) !important;
+        color: #f0f0f0;
+      }
+
+      .socialCol img {
+        width: 40px;
+        height: 40px;
+      }
+
+      .progress-bar {
+        text-align: center;
+      }
+
+      #header-navbar {
+        text-align: center;
+      }
+
+      @media only screen and (max-width: 600px) {
+        .button-margin {
+          margin-top: 10px !important;
         }
 
-
-
-
-        #portfolio-btn {
-            background-color: rgb(121, 15, 15);
-            color: rgb(255, 255, 255);
+        .certificates {
+          max-width: 300px;
         }
 
-        #portfolio-btn:hover {
-            background-color: rgb(255, 255, 255);
-            color: rgb(143, 12, 12);
+        .projects_carousel {
+          max-width: 300px;
         }
 
-        div.img-fluid {
-            max-width: 100%;
+        #carouselExampleCaptions {
+          width: 300px !important;
+        }
+
+        #carouselExampleFade {
+          width: 300px !important;
         }
 
         #contact-btn,
         #download-btn {
-            margin-left: 10px;
-        }
-
-        .contact-btn {
-            background-color: rgb(225, 84, 84) !important;
-            color: #f0f0f0;
-        }
-
-        .contact-btn:hover {
-            background-color: rgb(0, 0, 0) !important;
-            color: #f0f0f0;
+          margin: 0;
         }
 
         .socialCol img {
-            width: 40px;
-            height: 40px;
+          width: 25px;
+          height: 25px;
         }
 
-        .progress-bar {
-            text-align: center;
+        .socialCol li + li {
+          padding-left: 10px;
         }
 
-        #header-navbar {
-            text-align: center;
+        ul.socialCol {
+          padding-left: 0%;
         }
 
-        @media only screen and (max-width: 600px) {
-            .button-margin {
-                margin-top: 10px !important;
-            }
-
-            .certificates {
-                max-width: 300px;
-            }
-
-            #carouselExampleCaptions {
-                width: 300px !important;
-            }
-
-            #contact-btn,
-            #download-btn {
-                margin: 0;
-            }
-
-            .socialCol img {
-                width: 25px;
-                height: 25px;
-            }
-
-            .socialCol li+li {
-                padding-left: 10px;
-            }
-
-            ul.socialCol {
-                padding-left: 0%;
-            }
-
-            .row {
-                display: flex;
-                flex-direction: column;
-            }
-
-            div.col:nth-child(2) {
-                padding-top: 10% !important;
-            }
-
-            div.img-fluid {
-                padding: 0%;
-                margin: 0%;
-            }
-
-            #post-name-detail {
-                font-size: 22px;
-            }
+        .row {
+          display: flex;
+          flex-direction: column;
         }
+
+        div.col:nth-child(2) {
+          padding-top: 10% !important;
+        }
+
+        div.img-fluid {
+          padding: 0%;
+          margin: 0%;
+        }
+
+        #post-name-detail {
+          font-size: 22px;
+        }
+      }
     </style>
 
-
     <title>Gero Zayas Portfolio</title>
-</head>
+  </head>
 
-<body style="font-family:'Rubik', sans-serif;">
+  <body style="font-family: 'Rubik', sans-serif">
     <div>
-        {% include 'home/messages.html' %}
-        {% include "home/header.html"%}
-        {% block home%} {% endblock home%}
-        {% block about %} {% endblock about %}
-        {% block blog %} {% endblock blog %}
-        {% block portfolio %} {% endblock portfolio%}
-        
-        {% block contact %} {% endblock contact%}
-        {% block project_detail_content %}{% endblock project_detail_content%}
-        {% include "home/footer.html"%}
+      {% include 'home/messages.html' %} {% include "home/header.html"%} 
+      {%block home%} {% endblock home%} 
+      {% block about %} {% endblock about %} 
+      {%block blog %} {% endblock blog %} 
+      {% block portfolio %} {% endblock portfolio%}
+      {% block contact %} {% endblock contact%}
+      {% block project_detail_content%} {% endblock project_detail_content%} 
+      {% include "home/footer.html"%}
     </div>
 
     <script src="{% static 'script.js' %}"></script>
-</body>
-
+  </body>
 </html>
